# SWIPL_ZWAP

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  Makefile  README  README.md  readme.template
doc/hnd/: DunkleZahlen.hnd  SignTool.hnd  prolog64.hnd
inc/: SWI-Prolog.h  prolog.h  prolog.hpp
inc/dwarf/: dwarf.h
inc/tvision/: app.h  buffers.h  config.h  dialogs.h  drawbuf.h  editors.h  hardware.h  helpbase.h  msgbox.h  stddlg.h  system.h  textview.h  ttypes.h  tv.h  util.h  views.h
lib/: build.bat  zwap.pl
src/: 1  6  6.dfm  main.cc
src/Amiga/: 1  2  3  a.out  bootloader.hunk  bootloader.s  build.bat  cmdline.bat  input.S  input.asm  input.c  linker.script  output  output.hunk
src/cc/: 1  Doxyfile  Doxyfile.deu  Doxyfile.eng  build.sh  build32.bat  build32.sh  build64.bat  build64.sh  buildhelp.sh  createLang.cc  dwarf.c  engine.cc  help.h  locale.deu  locale.deu.txt  locale.eng  locale.eng.txt  main.cc  program.pas  program.prg  prolog.cc  prolog64.data  prolog64.hlp  prolog64.hlp.h  prolog64.txt  readme.txt  resource.h  resource.rc  spread.cpp  spreadview.h  (+9 more)
src/lang/src/: AboutBox.dfm  AboutBox.pas  C64ConfigFrame.dfm  C64ConfigFrame.pas  C64DrivesFrame.pas  C64KeyBoard.dfm  C64KeyBoard.pas  CMakeLists.txt  ChatFrame.dfm  ChatFrame.pas  DSLparser.bpk  EditFrame.dfm  Editor.cfg  Editor.dof  Editor.dproj  Editor.drc  Editor.identcache  Editor.mes  Editor.res  EditorForm.dfm  EditorForm.pas  EditorFrame.dfm  EditorFrame.pas  ErrorBoxForm.dfm  FoldersLocal.pas  FoldersRemote.dfm  FoldersRemote.pas  FontFaceFrame.dfm  FontFaceFrame.pas  FontStyleFrame.dfm  FontStyleFrame.pas  GlobalDeclaration.pas  HelpAuthorFrame.dfm  InfoBoxForm.dfm  InputBox.dfm  InputBox.pas  InterpreterClasses.pas  JvInspector.pas  LeftPanelFrame.dfm  MembersFrame.dfm  (+37 more)
src/lang/src/assemblerDSLdos32/: assemblerDSLdos32.bpr  assemblerDSLdos32.l  assemblerDSLdos32.y  build.bat  dllmain.c
src/lang/src/assemblerDSLwin32/: assemblerDSLwin32.bpr  assemblerDSLwin32.l  assemblerDSLwin32.y  build.bat
src/lang/src/backup/: AboutFrame.dfm  AboutFrame.pas  BasicDSL.l  C64ConfigFrame.dfm  C64ConfigFrame.pas  C64DrivesFrame.dfm  ComputerFrame.dfm  ComputerFrame.pas  DesignerFrame.dfm  DesignerFrame.pas  EditFrame.pas  Editor.dpr  Editor.mes  Editor.res  EditorForm.dfm  EditorForm.pas  EditorFrame.dfm  EditorFrame.pas  EnvironmentFrame.dfm  EnvironmentFrame.pas  ErrorBoxForm.pas  FolderHelper.pas  FoldersLocal.dfm  FontColorFrame.dfm  FontColorFrame.pas  FormatLayoutFrame.dfm  FormatLayoutFrame.pas  HelpAuthorFrame.pas  HelpTopicFrame.dfm  HelpTopicFrame.pas  InfoBoxForm.pas  Interfaces.pas  LeftPanelFrame.pas  MembersFrame.dfm  MembersFrame.pas  MiscTools.cfg  MiscTools.dof  MiscTools.res  NewProjectFrame.dfm  NewProjectFrame.pas  (+33 more)
src/lang/src/basicDSLdos32/: basicDSLdos32.bpr  basicDSLdos32.l  basicDSLdos32.y  build.bat
src/lang/src/basicDSLwin32/: basicDSLwin32.bpr  basicDSLwin32.l  basicDSLwin32.y  build.bat
src/lang/src/cLispDSLdos32/: build.bat  cLispDSLdos32.bpr  cLispDSLdos32.l  cLispDSLdos32.y
src/lang/src/cLispDSLwin32/: build.bat  cLispDSLwin32.bpr  cLispDSLwin32.l  cLispDSLwin32.y
src/lang/src/dBaseDSLdos32/: build.bat  dBaseDSLdos32.bpr  dBaseDSLdos32.l  dBaseDSLdos32.y  dllmain.c
src/lang/src/dBaseDSLwin32/: 1  DSLwin32DBase.bpf  DSLwin32DBase.bpr  FormTemplate.cpp  FormTemplate.dfm  FormTemplate.h  build.bat  dBaseDSLwin32.l  dBaseDSLwin32.y  displayList.cpp  displayList.h  dllmain.c  dllmain.cpp
src/lang/src/dBaseDSLwin32/temp/: copy.bat
src/lang/src/data/: Interfaces.pas  RF_1.pas  RF_10.pas  RF_100.pas  RF_101.pas  RF_102.pas  RF_103.pas  RF_104.pas  RF_105.pas  RF_11.pas  RF_12.pas  RF_13.pas  RF_14.pas  RF_15.pas  RF_16.pas  RF_17.pas  RF_18.pas  RF_19.pas  RF_2.pas  RF_20.pas  RF_21.pas  RF_22.pas  RF_23.pas  RF_24.pas  RF_25.pas  RF_26.pas  RF_27.pas  RF_28.pas  RF_29.pas  RF_3.pas  RF_30.pas  RF_31.pas  RF_32.pas  RF_33.pas  RF_34.pas  RF_35.pas  RF_36.pas  RF_37.pas  RF_38.pas  RF_39.pas  (+72 more)
src/lang/src/pascalDSLdos32/: build.bat  dllmain.c  pascalDSLdos32.bpr  pascalDSLdos32.l  pascalDSLdos32.y
src/lang/src/pascalDSLwin32/: DSLwin32Pascal.bpr  build.bat  displayList.cpp  dllmain.cpp  pascalDSLwin32.l  pascalDSLwin32.y  utils.cpp
src/lang/src/pascalDSLwin32/temp/: copy.bat
src/lang/src/prologDSLwin32/: DSLwin32Prolog.bpr  DSLwin32Prolog.res  build.bat  displayList.cpp  displayList.h  dllmain.cpp  prologDSLwin32.l  prologDSLwin32.y
src/lang/src/prologDSLwin32/temp/: copy.bat
src/lang/src/tools/: makepack.sh
(+140 files in other folders)
